Tue May 29 18:13:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Bring up-to-date.

Mon May 28 09:27:43 BST 2007  Olly Betts <olly@survex.com>

	* examples/copydatabase.cc: Fix to compile with GCC 2.95.

Mon May 28 01:28:23 BST 2007  Olly Betts <olly@survex.com>

	* examples/copydatabase.cc: Rewrite to take advantage of
	  being able to iterate over all the documents in a database.

Sun May 27 12:20:03 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/termgenerator.h: Improve documentation comments
	  for TermGenerator class.

Sun May 27 12:15:02 BST 2007  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc,bin/,examples/,net/tcpserver.cc,
	  tests/api_db.cc,tests/harness/testsuite.cc,tests/harness/testutils.h,
	  tests/queryparsertest.cc,tests/termgentest.cc: Make use of
	  Xapian::Error::get_description(), which improves error reporting
	  in a number of places.
	* tests/harness/testsuite.cc: If we get an exception with a long
	  message in verbose mode, just report the whole message rather than
	  reporting the truncated message followed by the whole message.
	* tests/queryparsertest.cc: Handle Xapian::QueryParserError specially
	  (as we previously handled all Xapian::Error exceptions).  Other
	  Xapian::Error exceptions now report the description not just the
	  message.

Sun May 27 11:33:11 BST 2007  Olly Betts <olly@survex.com>

	* api/error.cc,generate-exceptions.in: Add new API method
	  Xapian::Error::get_description() to allow removal of
	  essentially duplicated code in many places.  Also useful for
	  users for the same reason.

Sun May 27 09:56:21 BST 2007  Olly Betts <olly@survex.com>

	* generate-exceptions.in: Add vim modeline to force perl syntax
	  highlighting.

Sat May 26 22:53:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Bring up-to-date.

Sat May 26 22:49:20 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/deprecation.rst: Fix typo in deprecation list for the